--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
+    "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-dom": "^18.2.4",
     "@types/react-window": "^1.8.5",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.1",
